--- a/app/lib/app_web/templates/section__role/breadcrumbs.html.eex
+++ b/app/lib/app_web/templates/section__role/breadcrumbs.html.eex
@@ -1,5 +1,5 @@
-<div class="breadcrumb-holder">
-    <ul class="breadcrumb">
+<div class="breadcrumbs">
+    <ul >
         <li>
             <span>
                 Courses
