--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -6,6 +6,7 @@ $muted-line-color: #e5e5e5;
 $smaller-font-size: 0.875em;
 $max-width: 1000px;
 $dark-background: #222;
+$main-font-color: #222;
 
 @import "./normalize.css";
 
@@ -42,6 +43,7 @@ $dark-background: #222;
 html, body{
   padding: 0;
   margin: 0;
+  line-height: 1.3rem;
 }
 
 html{
@@ -50,7 +52,7 @@ html{
 }
 
 body {
-    color: #222222;
+    color: $main-font-color;
     font-family: "Mallory",Verdana,Arial,Helvetica,sans-serif;
     padding-bottom:0rem;
     background-color:$default-background-color;
@@ -77,10 +79,14 @@ h1, h2, h3, h4, h5 {
     font-weight: 400;
     font-family: "YaleNew",Georgia,"Times New Roman",serif;
 }
+h2 {
+    font-size: 1.7rem;   
+}
 
 header {
     display: block;
     background-color: #003366;
+    padding-top: $default-margin;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -89,10 +95,10 @@ header {
         width: 100%;
         max-width: $max-width;
         font-family: "Mallory";
-        vertical-align:baseline;
         display: grid;
         grid-template-columns: 50% 50%;
-
+        grid-template-columns: minmax(0, 1fr), minmax(0, 1fr);
+        padding: $default-margin 0;
         a {
             color: white;
         }
@@ -101,12 +107,12 @@ header {
         text-align: right;
         > ul {
             padding: 0;
+            margin: 0;
             display: flex;
             flex-direction: row-reverse;
             li {
                 list-style: none;
-                padding: $default-margin;
-                padding-right: 0;
+                padding: 0 $default-margin 0 0;
                 font-size: $smaller-font-size;
                 a {
                     text-transform: uppercase;
@@ -126,6 +132,7 @@ main {
     div.main-body {
         max-width: $max-width;
         margin: auto;
+        padding-top: 2*$default-margin;
     }
 }
 
@@ -144,21 +151,19 @@ main {
 
 .card-holder {
     display: grid;
-    margin: 0 -$default-margin;
     grid-template-columns: 1fr 1fr;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-column-gap: 2*$default-margin;
     grid-row-gap: 3*$default-margin;
-    padding: 3*$default-margin 0;
+    padding: 2*$default-margin 0 4*$default-margin 0;
 
     a:hover {
         text-decoration: none;
     }
 
-    > div.card {
-        padding: 1em;
+    > .card {
+        padding: $default-margin 2*$default-margin $default-margin $default-margin;
         background-color: white;
-        padding: $default-margin $default-margin $default-margin 0;
         box-shadow: 0 5px 15px rgba(0,0,0,.08);
         padding-left: $default-margin;
         color: $muted-text-color;
@@ -174,8 +179,13 @@ main {
             border-top: 1px solid $muted-line-color;
             font-size: $smaller-font-size;
         }
+        p {
+            color: $muted-text-color;
+            font-size:  $smaller-font-size;
+            font-weight: 400;
+        }
     }
-    > div.card:hover {
+    > .card:hover {
         box-shadow: 0 6px 18px rgba(0,0,0,.1);
     }
 }
