--- a/app/lib/app_web/templates/submission/live.html.leex
+++ b/app/lib/app_web/templates/submission/live.html.leex
@@ -41,46 +41,21 @@
     Comments
     <span class="comment-count">(<%= @submission.comment_count |> Integer.to_string %>)</span>
     </h2>
-    <ul>
+    <ul class="comment-bubbles">
         <%= for {comment, i} <- Enum.with_index(@comments) do %>
-            <li class="comment">
-                <article class="speech-bubble" tabindex="-1">
-                    <div>
-                        <p>
-                            <%= comment.description %>
-                        </p>
-                    </div>
-                </article>
-                <div class="comment-author comment-author-<%= if rem(i+1, 2) == 0 do %>even<% else %>odd<% end %>">
-                    <%= if @topic.anonymous do %>
-                            <% else %>
-                            <b><%= comment.user.display_name %></b>
-                            /
-                     said <br>
-                    at
-                    <% end %>
-                    <%= comment.inserted_at %>
-                    <%= if @is_admin || @uid == comment.user_id do %>
-                        <div>
-                          <%= link "Edit", to: Routes.comment_path(@socket, :edit, comment.id) %>
-                            |
-                          <%= link "Delete", to: Routes.comment_path(@socket, :delete, comment.id), method: :delete, data: [confirm: "Are you sure?"] %>
-                        </div>
-                    <% end %>
-                </div>
-            </li>
+          <%= live_component @socket, CommentLiveComponent, id: comment.id, comment: comment, topic: @topic, i: i, is_admin: @is_admin, uid: @uid %>
         <% end %>
     </ul>
+
 <% @topic.allow_submission_comments == false -> %>
-
+  <!-- No comments allowed! -->
 <% true -> %>
-<h2>
-Comments
-</h2>
-
-<p>
+  <h2>
+    Comments
+  </h2>
+  <p>
     None yet ;P
-</p>
+  </p>
 <% end %>
 
 <%= if @topic.allow_submission_voting do %>
