--- a/app/lib/app_web/templates/page/index.html.eex
+++ b/app/lib/app_web/templates/page/index.html.eex
@@ -1,22 +1,5 @@
-<section>
-    <div>
-      <img src="/images/som-class-of-2020.jpg" alt="Class of 2020" data-=""  style="height: 450px; width: 1170px;">
-      <div>
-        <div>
-          <span style="letter-spacing: 0.2em; font-size: 0.725rem">WELCOME</span>
-          <h1>Yale Chat</h1>
-          <p>The website you're using is an experimental piece of software we hope will be helpful during the COVID-19 crisis (and afterward!).</p>
-          <a href="/auth/cas">Log In</a>
-        </div>
-      </div>
-    </div>
-</section>
-<section>
-  <div>
-    <div>
-    <br/>We'd like your advice! What should an app like this include? Right now we're thinking about polls, live chat, private chat, and emojis. (Emojis are top priority, of course.)
-    <br/>
-    <br/>What do you want to see in a communications platform for class? <a href="mailto:nick.peranzi@yale.edu;kyle.jensen@yale.edu?Subject=Yale.chat%20Feature%20Request" target="_top">Please tell us!</a>
-    </div>
-  </div>
-</section>
+<div class="welcome">
+  <span>WELCOME</span>
+  <p>The website you're using is an experimental piece of software we hope will be helpful during the COVID-19 crisis (and afterward!).</p>
+  <a href="/auth/cas">LOG IN</a>
+</div>
