--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -268,6 +268,12 @@ main {
             border-top: 1px solid $muted-line-color;
             font-size: $smaller-font-size;
         }
+        .course-admin{
+            margin-top: $default-margin;
+            padding-top: $default-margin;
+            border-top: 1px solid $muted-line-color;
+            font-size: $smaller-font-size;
+        }
         p {
             color: $muted-text-color;
             font-size:  $smaller-font-size;
