--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -553,7 +553,7 @@ checkbox, input, radio, select, textarea {
 }
 
 
-// FOrm stuff
+// Form stuff
 .bottom-form {
     margin-top: 4*$default-margin;
 }
@@ -562,6 +562,13 @@ fieldset {
     margin: $default-margin 0;
     padding: 0;
 }
+
+fieldset.grid-2-column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
 select:not([multiple]):not([size]) {
 	-webkit-appearance: none;
 	-moz-appearance: none;
@@ -607,6 +614,20 @@ button:focus,
 button:hover {
  background-color:#151515;
  color:#fff
+}
+
+.grid-2-column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-column-gap: 2*$default-margin;
+  grid-row-gap: 3*$default-margin;
+  padding: 2*$default-margin 0 4*$default-margin 0;
+  align-items: center;
+}
+.full-width-2-column {
+  grid-column: 1 / 3;
 }
 /* Import style for default CSS classes (Phoenix LiveView) */
 @import "../../deps/phoenix_live_view/assets/css/live_view.css";
